--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/pwa": "^2.5.0",
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
