--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "eslint-loader": "^2.1.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-vue": "^4.7.1",
-    "prettier": "^1.14.3"
+    "node-sass": "^4.9.3",
+    "prettier": "^1.14.3",
+    "sass-loader": "^7.1.0"
   }
 }
