--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^2.5.0",
+    "firebase": "^5.5.0",
     "nuxt": "^1.0.0",
     "nuxt-sass-resources-loader": "^2.0.5",
     "vuetify": "^1.2.4"
