--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "material-design-icons-iconfont": "^3.0.3",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
+    "vue-analytics": "^5.16.0",
     "vue-aplayer": "^1.6.1",
     "vue-router": "^3.0.1",
     "vue-select": "^2.5.1",
